[package]
authors = ["Sayan Nandan <ohsayan@outlook.com>"]
description = "Derive macros for automating the boring stuff"
edition = "2018"
license = "Apache-2.0"
name = "derived"
readme = "README.md"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.9"
syn = {version = "1.0.77", features = ["full"]}
